# ROProject3

./: .gitignore  .gitmodules  .travis.yml  README.md  Tooling  Tooling.md  cat.STL  t  unicorn.STL
CAD/: cat.STL
Doxygen/html/: afterdoc_8h_source.html  annotated.html  autolink_8cpp.html  bug.html  classA-members.html  classA.html  classAfterdoc__Test-members.html  classAfterdoc__Test.html  classAutolink__Test-members.html  classAutolink__Test.html  classB-members.html  classB.html  classC-members.html  classC.html  classC1.html  classC2.html  classC3.html  classC4.html  classC5.html  classD-members.html  classD.html  classE-members.html  classE.html  classEnum__Test-members.html  classEnum__Test.html  classExample__Test-members.html  classExample__Test.html  classFn__Test-members.html  classFn__Test.html  classInclude__Test-members.html  classInclude__Test.html  classJavadoc__Test-members.html  classJavadoc__Test.html  classMemgrp__Test-members.html  classMemgrp__Test.html  classOverload__Test-members.html  classOverload__Test.html  classPar__Test.html  classQTstyle__Test-members.html  classQTstyle__Test.html  (+145 more)
computer-vision/src/: ProjectVideoProcessing.py
docs/: rosSetup.md
images/cat/: cat.0da6c635-cfaa-11ed-a5b4-ce42c07f0f78.xml  cat.101ef599-cfaa-11ed-9beb-ce42c07f0f78.xml  (+56 more)
ros_workspace/install/: local_setup.sh  (+2 more)
ros_workspace/src/interfaces/: package.xml
ros_workspace/src/interfaces/msg/: imageProcessing.msg  image_capturing.msg  image_processing.msg  image_processing_shape.msg  objectPosition.msg
ros_workspace/src/interfaces/srv/: machine_learning.srv
(+518 files in other folders)
